# parsley-csv

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build-release.sh  test.sql
.github/workflows/: release.yml
src/: csv_writer.rs  date_filter.rs  lib.rs  main.rs  parser.rs  types.rs
tests/: integration_tests.rs
