[package]
name = "table-to-csv"
description = "Parsley CSV is a command-line tool that converts SQL database dumps to CSV files."
categories = ["database", "cli", "data-processing", "csv"]
license = "MIT"
version = "0.4.0"
edition = "2024"

[dependencies]
regex = "1.10"
csv = "1.3"
anyhow = "1.0"
rayon = "1.10"
chrono = "0.4"
