[package]
name = "table-to-csv"
description = "Parsley CSV is a command-line tool that converts SQL database dumps to CSV files."
license = "MIT"
version = "0.4.1"
edition = "2024"
keywords = ["database", "cli", "data-processing", "csv"]
authors = ["Sean Urgel <developer@seanurgel.dev>"]

[dependencies]
regex = "1.10"
csv = "1.3"
anyhow = "1.0"
rayon = "1.10"
chrono = "0.4"
